Add last changes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=demo-spring-security
+
+management.info.env.enabled=true
+management.endpoints.web.exposure.include=*
+
+spring.devtools.restart.enabled=true
+
+spring.security.user.name=user
+spring.security.user.password=1234
+
+#excludem endpoint-urile /healt si /info
+management.endpoints.web.exposure.exclude=health
+
+info.app.name=Demo Spring Security
+info.app.author=Botnariuc Ion
+info.app.version=0.0.1
